[package]
name = "integration_tests_bindgen_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "integration_tests_bindgen_macro"
path = "src/lib.rs"
proc-macro = true

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
syn = { version = "2.*", features = ["full", "extra-traits", "visit-mut", ] }
quote = "1.*"
proc-macro2 = "1.*"
