[package]
name = "test_context"
version = "0.1.0"
edition = "2021"

[dependencies]
integration_tests_bindgen_macro = {path = "../integration_tests_bindgen_macro"}
integration_tests_toolset = {path = "../integration_tests_toolset"}
near-sdk = { version = "4", default-features = false, features = ["unit-testing", "unstable"] }
near-contract-standards = "4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
workspaces = "0.7.0"
async-trait = "0.1.63"
owo-colors = "3"
prettytable-rs = "0.10"
serde = "1"
thiserror = "1"
derivative = "2"
futures = "0.3"
near-units = "0.2"
once_cell = "1"
derive_builder = "0.12.0"

[features]
stress_test = []