[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1.0"
async-trait = "0.1.63"
integration_tests_toolset = { path = "../integration_tests_toolset" }
maplit = "1"
near-units = "0.2.0"
serde_json = "1.0"
test_context = {path = "../test_context"}
test_contract = { path = "test_contract"}
tokio = { version = "1.14", features = ["full"] }
workspaces = {version = "0.7.0"}
