[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
integration_tests_toolset = { path = "../integration_tests_toolset" }
test_contract = { path = "test_contract"}
test_token = {path = "../test_token"}
scenario_toolset = {path = "../scenario_toolset"}
near-sdk = { version = "4", default-features = false, features = ["unit-testing", "unstable"] }
anyhow = "1.0"
async-trait = "0.1.63"
maplit = "1"
near-units = "0.2.0"
owo-colors = "3"
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
rand = "0.8"
workspaces = {version = "0.7.0"}
futures = "0.3"
